src/tests/testfiles/binary-operators/types-9.txt
Error at 2:10: Comparison operator operands need to be of same type (have float and int)
10.5 > 10;
     ^
